# MS-AMP

./: .clang-format  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .mdlrc  .mypy.ini  .style.yapf  404.html  Dockerfile  MANIFEST.in  Makefile  README.md  SUPPORT.md  index.html  opensearch.xml  pyproject.toml  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md
.github/workflows/: build-image.yaml  gb-pages.yml  lint.yaml  security.yaml  unit-tests.yaml
assets/css/: styles.514ab644.css  styles.9f188c0d.css
assets/js/: 01a85c17.45423cfb.js  01a85c17.56efb409.js  139c734a.0a4befae.js  139c734a.5e56b5e1.js  13d83d13.bcbe1552.js  16339936.5105264f.js  16339936.6b467585.js  16339936.9ff367a4.js  16b7cda5.02dddea5.js  16b7cda5.252baec4.js  16b7cda5.26b6fc17.js  16b7cda5.3b836d1d.js  16b7cda5.49c32f03.js  16b7cda5.651c3096.js  16b7cda5.8fe57ea6.js  16b7cda5.b39e24ea.js  17896441.f73d6be3.js  19b6a884.6a6f4c0a.js  1a0e0a2d.10efa2d5.js  1a0e0a2d.205cb4fb.js  1a0e0a2d.c2205980.js  1be78505.8420a0a1.js  1be78505.9c8483b0.js  237.dffe32af.js  300.3b1b1f99.js  324723b9.00d69d43.js  324723b9.a9b5b962.js  324723b9.f87c50de.js  40.4c6b2ba2.js  440c4558.baf6f0bd.js  440c4558.d1ad7afa.js  486.796b6da0.js  486.9db4d1b2.js  4b6e68bc.47ec6b4c.js  4b6e68bc.c4dc24cc.js  4b6e68bc.cb93bcfb.js  518.89eb250f.js  518.9b8f03b7.js  5296987c.9825c59e.js  5296987c.b1ee7e4a.js  (+93 more)
blog/: atom.xml  index.html  rss.xml
blog/release-msamp-v0.2/: index.html
blog/release-msamp-v0.3/: index.html
blog/release-msamp-v0.4/: index.html
blog/tags/: index.html
blog/tags/announcement/: index.html
blog/tags/ms-amp/: index.html
blog/tags/release/: index.html
csrc/dist_op/: CMakeLists.txt  FindRCCL.cmake  dist.cpp
csrc/extensions/: pybind.cpp  setup.py
csrc/extensions/include/: common.h  concurrency.h  extensions.h  hip_f8_impl.h  hip_float8.h  poll.h  utils.cuh  vectorized_pointwise.h
csrc/extensions/operators/: arithmetic.cu
csrc/extensions/optim/: adamw.cu
dockerfile/: entrypoint.sh  torch1.14-cuda11.8.dockerfile  torch2.1-cuda12.1.dockerfile  torch2.1-cuda12.2.dockerfile
docs/: introduction.md
docs/developer-guides/: contributing.md  development.md  using-docker.mdx
docs/developer-guides/contributing/: index.html
docs/developer-guides/development/: index.html
docs/developer-guides/using-docker/: index.html
docs/getting-started/: installation.mdx  run-msamp.md
docs/getting-started/installation/: index.html
docs/getting-started/run-msamp/: index.html
docs/introduction/: index.html
docs/user-tutorial/: container-images.mdx  optimization-level.md  usage.md
docs/user-tutorial/container-images/: index.html
docs/user-tutorial/optimization-level/: index.html
docs/user-tutorial/usage/: index.html
examples/: README.md  cifar10_deepspeed.py  cifar10_deepspeed_te.py  ds_config.json  ds_config_msamp.json  ds_config_msamp_zero.json  ds_config_zero_msamp.json  ds_config_zero_te_msamp.json  fsdp_mnist.py  mnist.py  mnist_ddp.py  mnist_fsdp.py
msamp/: __init__.py
msamp/api/: __init__.py
msamp/common/dtype/: __init__.py  dtypes.py  floating.py
msamp/common/include/: common.h  concurrency.h  (+2 more)
msamp/deepspeed/: __init__.py
msamp/fp8/: te.py
msamp/fsdp/: __init__.py  _exec_order_utils.py  _init_utils.py  _runtime_utils.py  _wrap_utils.py  flat_param.py  fully_sharded_data_parallel.py  replacer.py
msamp/megatron/: __init__.py  distributed.py  layers.py
msamp/nn/: __init__.py  clip_grad.py  distributed.py  functional.py  linear.py  module.py  parameter.py  state.py
msamp/operators/: amp.py
msamp/operators/dist_op/: CMakeLists.txt  FindNCCL.cmake  __init__.py  dist.cpp  dist_op.py  setup.py
msamp/operators/fp8_op/: CMakeLists.txt  FindNCCL.cmake  __init__.py  build.sh  fp8.cpp  fp8_op.py
msamp/optim/: __init__.py  adam.py  adamw.cu  adamw.py  adamw_base.py  common.h  optimizer.py  setup.py
msamp/te/: __init__.py  extension.py  modules.py  replacer.py
search/: index.html
tests/: __init__.py  test_initialize.py
tests/api/: test_clip_grad.py
tests/common/: test_amp.py  test_dtypes.py  test_floating.py  test_transformer_engine_wrapper.py
tests/deepspeed/: test_engine.py  test_initialize.py  test_optimizer.py  test_zero.py
tests/fake/: test_fake.py
tests/fsdp/: test_fsdp_distributed.py  test_fsdp_replacer.py
tests/helper/: decorator.py
tests/nn/: test_clip_grad.py  test_distributed.py  test_functional.py  test_linear.py  test_module.py  test_state.py
tests/operators/: test_amp.py  test_arithmetic.py  test_dist.py  test_fp4_quant.py  test_fp4_quantize.py  test_fp8.py  test_gemm.py
tests/optim/: test_adamw.py
tests/te/: test_extension.py  test_modules.py  test_replacer.py  test_te_replacer.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: 2023-07-20-release-0-2.md  2023-11-06-release-0-3.md  2024-02-26-release-0-4.md
(+49 files in other folders)
